# aquarium-app

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  sdkconfig.defaults
.github/workflows/: ci.yml
components/aquarium_app/: CMakeLists.txt  idf_component.yml
components/aquarium_app/include/: api_dispatch.hpp  aquarium_app.hpp  device_service.hpp  esp_time_source.hpp  firmware_http_update.hpp  http_ws_portal.hpp  interfaces.hpp  json_state.hpp  model.hpp  mqtt_client_hub.hpp  mqtt_ha_bridge.hpp  mqtt_nvs.hpp  nvs_store.hpp  pump_gpio.hpp  rgbw_ledc.hpp  schedule_engine.hpp  temperature_ds18b20.hpp  temperature_null.hpp  weather_client.hpp  wifi_station.hpp
components/aquarium_app/src/: api_dispatch.cpp  aquarium_app.cpp  device_service.cpp  esp_time_source.cpp  firmware_http_update.cpp  http_ws_portal.cpp  json_state.cpp  model.cpp  mqtt_client_hub.cpp  mqtt_ha_bridge.cpp  mqtt_nvs.cpp  nvs_store.cpp  pump_gpio.cpp  rgbw_ledc.cpp  schedule_engine.cpp  temperature_ds18b20.cpp  weather_client.cpp  wifi_station.cpp
components/aquarium_app/web/: index.html  ui-logic.test.mjs
docs/: ARCHITECTURE.uk.md  BUILD_FLASH.uk.md  HOME_ASSISTANT.uk.md  README.uk.md  REVIEW.uk.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
test/host/: CMakeLists.txt  test_schedule_engine.cpp
